# woo-sy-app

./: .gitignore  Pipfile  Procfile  README.md  config.py  notes.txt  pyproject.toml  requirements.txt  run.py  woosy.py  worker.py
app/: __init__.py  etsy.py  forms.py  listing.py  models.py  routes.py  woocommerce.py  wordpress.py
app/templates/: 401.html  base.html  etsy_results.html  index.html  listing_from_etsy.html
migrations/versions/: 0e6db29dab89_.py  edbe6f60c40f_users_table.py
