[tool.poetry]
name = "woo-sy-app"
version = "0.1.0"
description = "WooCommerce + Etsy = woo-sy | woo-sy + Web App = woo-sy-app"
authors = ["Alexander VanTol <alexander.m.vantol@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
flask-login = "^0.4.1"
flask-sqlalchemy = "^2.3"
flask-migrate = "^2.2"
flask-wtf = "^0.14.2"
flask-bootstrap = "^3.3"
pyopenssl = "^18.0"
psycopg2 = "^2.7"
gunicorn = "^19.9"
woo-sy = "*"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
